# IronWatch

./: Cargo.toml  README.md
InstallerPkg/: build_installer.bat  installer.nsi
src/: cli.rs  communication.rs  config.rs  error.rs  gui.rs  gui_render.rs  gui_simple.rs  main.rs  monitoring_service.rs  output.rs  system_tray.rs  usb_monitor.rs
