[package]
name = "IronWatch"
version = "1.0.0"
edition = "2021"
authors = ["KnivInstitute"]
description = "A modular CLI tool for monitoring USB device inputs"
license = "MIT"
repository = "https://github.com/KnivInstitute/IronWatch"
readme = "README.md"
keywords = ["usb", "monitoring", "security", "device", "input"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
rusb = "0.9"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
dirs = "5.0"
